[gd_scene load_steps=13 format=2]

[ext_resource path="res://players/magic/void/void.gd" type="Script" id=1]
[ext_resource path="res://players/magic/void/portalBG.png" type="Texture" id=2]
[ext_resource path="res://players/magic/void/portalFG.png" type="Texture" id=3]
[ext_resource path="res://players/magic/void/void.wav" type="AudioStream" id=4]
[ext_resource path="res://players/magic/void/fail.wav" type="AudioStream" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="CanvasItemMaterial" id=2]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 0, 90, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 20.0
flatness = 0.0
gravity = Vector3( 90, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.0
angular_velocity = 45.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 80.0
damping_random = 0.0
angle = 90.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 1.0
anim_speed_random = 1.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Gravity", "Initial Velocity", "Scale", "Spread", "Trail" ]

[sub_resource type="Animation" id=6]

length = 2.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("portalBG:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("portalFG:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 16, 64 )

[node name="VoidPortal" type="Node2D"]

script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}

[node name="portalBG" type="Sprite" parent="." index="0"]

material = SubResource( 1 )
texture = ExtResource( 2 )
hframes = 14
frame = 5
_sections_unfolded = [ "Material" ]

[node name="portalFG" type="Sprite" parent="." index="1"]

material = SubResource( 2 )
z_index = 3
texture = ExtResource( 3 )
hframes = 14
frame = 5
_sections_unfolded = [ "Material", "Z Index" ]

[node name="sparks" type="Particles2D" parent="." index="2"]

position = Vector2( 16, 0 )
emitting = true
amount = 32
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 2.5
explosiveness = 0.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 5 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rotate = SubResource( 6 )
blend_times = [  ]

[node name="collision" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="sensor" type="CollisionShape2D" parent="collision" index="0"]

shape = SubResource( 7 )

[node name="SamplePlayer" type="Node" parent="." index="5"]

[node name="void" type="AudioStreamPlayer" parent="SamplePlayer" index="0"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="fail" type="AudioStreamPlayer" parent="SamplePlayer" index="1"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"


